# clar-focus

./: .gitignore  README.md  install.sh  pyproject.toml
examples/systemd/: clar-focus-recover.service  omarchy-focus-recover.service
examples/waybar/: clar-focus-waybar.sh  module.jsonc  omarchy-focus-waybar.sh  style.css
src/omarchy_focus/: __init__.py  bootstrap.py  cli.py  database.py  exceptions.py  focus_hosts_helper.py  legacy.py  models.py  notifications.py  paths.py  settings.py  utils.py  waybar.py
src/omarchy_focus/services/: __init__.py  focus.py  pomodoro.py  stats.py  tasks.py
src/omarchy_focus/tui/: __init__.py  app.py  app.tcss  dialogs.py
tests/: test_focus_hosts_helper.py  test_services.py
